<resources>
    <string name="app_name">KYYS</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="liaotian">聊天</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="tuichukangyunyisheng">退出康韵颐晟</string>
    <string name="fuwujilu">服务记录</string>
    <string name="gerenzhongxin">个人中心</string>
    <string name="fuwushezhi">服务设置</string>
    <string name="fuwushouye">服务首页</string>
    <string name="jinjiuyuan">紧急救援</string>
    <string name="zizhuzhenduan">自助诊断</string>
    <string name="jibingwenzhen">疾病问诊</string>
    <string name="zizhuguahao">自助挂号</string>
    <string name="zhongjilvtong">重疾绿通</string>
    <string name="yihushangmen">医护上门</string>
    <string name="wodeyisheng">我的医生</string>
    <string name="jiujibutie">救济补贴</string>
    <string name="jiankangguali">健康管理</string>
    <string name="gongyijijin">公益基金</string>
    <string name="yinger">婴儿</string>
    <string name="fanhui">返回</string>
    <string name="shouye">首页</string>
    <string name="tongyi">同意</string>
    <string name="jujue">拒绝</string>
    <string name="guaduan">挂断</string>
    <string name="mianti">免提</string>
    <string name="lianjiezhong">连接中...</string>
    <string name="qiehuanshexiangtou">切换摄像头</string>
    <string name="guanbimianti">关闭免提</string>
    <string name="kaiqimianti">开启免提</string>
    <string name="qqjxspth">请求进行视频通话</string>
    <string name="shipintonghuazhong">视频通话中</string>
    <string name="yuyintonghuazhong">语音通话中</string>
    <string name="qqjxyyth">请求进行语音通话</string>
    <string name="qsrysxm">请输入医生姓名</string>
    <string name="keshi">科室</string>
    <string name="qxzks">请选择科室</string>
    <string name="jiezhenliang">接诊量:</string>
    <string name="jianjie">简介:</string>
    <string name="guahao">挂号</string>
    <string name="zhifuxinxi">支付信息</string>
    <string name="querenzhifu">确认支付</string>
    <string name="qingshaodeng">请稍等</string>
    <string name="lianxiyisheng">联系医生</string>
    <string name="kangyunyisheng">康韵医晟</string>
    <string name="xunyi">寻医</string>
    <string name="jiankang">健康</string>
    <string name="yuyueguahao">预约挂号</string>
    <string name="mianfeizhixun">免费咨询</string>
    <string name="zhuanjiawenzhen">专家问诊</string>
    <string name="yishengshanchang">医生擅长</string>
    <string name="yishengshanchang_text">眼睛常见病，多发病，疑难病，眼部整形美容，眼部肿瘤切除，眼部畸形矫正，屈光性疾病治疗，等等。</string>
    <string name="weizhikeshi">未知科室</string>
    <string name="qitakeshi">其它科室</string>
    <string name="yishengweizhan">医生微站</string>
    <string name="xiaoxi">消息</string>
    <string name="zhifu">支付</string>


    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="zhifuchenggong">支付成功</string>
    <string name="qingguahao">请挂号</string>
    <string name="quxiao">取消</string>
    <string name="quguahao">去挂号</string>
    <string name="guanliyuan">管理员</string>
    <string name="yisheng">医生</string>
    <string name="putongyonghu">普通用户</string>
    <string name="wodexiaoxi">我的消息</string>
    <string name="guanyu">关于</string>
    <string name="banbengengxin">版本更新</string>
    <string name="shoukuanfang">收款方：</string>
    <string name="shoukuanjine">收款金额：</string>
    <string name="jiankangdangan">健康档案</string>
    <string name="wodeyiyue">我的预约</string>
    <string name="shezhi">设置</string>
    <string name="dengluzhong">登录中...</string>
    <string name="tijiao">提交</string>
    <string name="qszndyhm">请设置您的用户名</string>
    <string name="szmm">设置密码（长度为6-16个字符）</string>
    <string name="zcsrmm">再次输入密码</string>
    <string name="yanzhenma">验证码</string>
    <string name="fasongyanzhenma">发送验证码</string>
    <string name="zcxxbwz">注册信息不完整</string>
    <string name="mmsrnyz">密码输入不一致</string>
    <string name="nsrdmmbfhyq">您输入的密码不符合要求</string>
    <string name="xuanzekeshi">选择科室</string>
    <string name="zhucechenggong">注册成功</string>
    <string name="wodeyuyue">我的预约</string>
    <string name="yuyue">预约</string>
    <string name="yuyuechenggong">预约成功</string>
</resources>
