<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.mm.kyys.Wighet.XlTitle
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </com.mm.kyys.Wighet.XlTitle>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoukuanfang"
            android:textSize="15sp"
            android:textColor="#000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kangyunyisheng"
            android:textSize="15sp"
            android:textColor="#000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoukuanjine"
            android:textSize="15sp"
            android:textColor="#000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5元"
            android:textSize="15sp"
            android:textColor="#000"
            />
    </LinearLayout>
    <Button
        android:id="@+id/register_btn_pay"
        style="@style/button_style"
        android:layout_width="300dp"
        android:text="@string/querenzhifu"
        android:layout_marginTop="50dp"/>
</LinearLayout>