<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:orientation="vertical" >

    <com.mm.kyys.Wighet.XlTitle
        android:id="@+id/registeraccount_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </com.mm.kyys.Wighet.XlTitle>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1.5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/register_prompt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="#666"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#fff" >

            <EditText
                android:id="@+id/registeraccount_et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/qszndyhm"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="15sp" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#fff" >



            <EditText
                android:id="@+id/registeraccount_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_password"
                android:background="@null"
                android:hint="@string/szmm"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#fff" >



            <EditText
                android:id="@+id/registeraccount_et_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_password"
                android:background="@null"
                android:hint="@string/zcsrmm"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="15sp" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:background="#fff" >


            <EditText
                android:id="@+id/registeraccount_et_identifying"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/yanzhenma"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="15sp" />

            <Button
                android:id="@+id/registeraccount_btn_sendidentifying"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/fasongyanzhenma"
                android:textColor="#fff"
                android:textSize="15sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/registeraccount_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_green"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/tijiao"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>