<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mm.kyys.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/mainactivity_framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            ></FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="4"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            >

            <LinearLayout
                android:id="@+id/mainactivity_tab1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">
                <ImageView
                    android:id="@+id/mainactivity_iv_tab1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_gh"
                    />

                <TextView
                    android:id="@+id/mainactivity_tv_tab1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guahao"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainactivity_tab2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/mainactivity_iv_tab2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_xy"/>

                <TextView
                    android:id="@+id/mainactivity_tv_tab2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xunyi"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mainactivity_tab3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/mainactivity_iv_tab3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_jk"/>

                <TextView
                    android:id="@+id/mainactivity_tv_tab3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jiankang"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/mainactivity_tab4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:id="@+id/mainactivity_iv_tab4"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/icon_gr"/>
                    <TextView
                        android:id="@+id/mainactivity_dot"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:background="@mipmap/red_dot"
                        android:layout_gravity="end"
                        android:visibility="gone"/>
                </FrameLayout>


                <TextView
                    android:id="@+id/mainactivity_tv_tab4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gerenzhongxin"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
