<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >
    <ScrollView
    android:id="@+id/firstpage_sv"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:background="@mipmap/bg_userinfo">

        <com.mm.kyys.View.CircularImage
            android:id="@+id/mine_user_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/mine_user_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Tom"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center|bottom"/>

            <TextView
                android:id="@+id/mine_user_iden"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="Tom"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:gravity="center|top"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_my_doctor"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wodeyisheng"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textColor="@color/black_deep"/>
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e3e3e3"
            />
        <LinearLayout
            android:id="@+id/mine_layout_book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_my_record"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wodeyiyue"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textColor="@color/black_deep"/>
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#e3e3e3"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_health_file"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jiankangdangan"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textColor="@color/black_deep"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_order"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/mine_btn_message"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/wodexiaoxi"
                android:textSize="15sp"
                android:textColor="#000"
                android:gravity="left|center"
                android:layout_marginLeft="40dp"
                />
            <TextView
                android:id="@+id/mine_tv_dot"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@mipmap/red_dot"
                android:backgroundTintMode="add"
                android:layout_gravity="end|center"
                android:visibility="visible"
                android:layout_marginRight="30dp"/>
            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/icon_toright"
                android:backgroundTintMode="add"
                android:layout_gravity="end|center"
                android:visibility="visible"/>

        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/care_msg_warning"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/guanyu"
                android:textSize="15sp"
                android:textColor="#000"
                android:gravity="left|center"
                android:layout_marginLeft="40dp"
                />
            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/icon_toright"
                android:backgroundTintMode="add"
                android:layout_gravity="end|center"
                android:visibility="visible"/>

        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_select_true"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/banbengengxin"
                android:textSize="15sp"
                android:textColor="#000"
                android:gravity="left|center"
                android:layout_marginLeft="40dp"
                />
            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/icon_toright"
                android:backgroundTintMode="add"
                android:layout_gravity="end|center"
                android:visibility="visible"/>

        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@mipmap/ic_my_setting"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/shezhi"
                android:textSize="15sp"
                android:textColor="#000"
                android:gravity="left|center"
                android:layout_marginLeft="40dp"
                />
            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@mipmap/icon_toright"
                android:backgroundTintMode="add"
                android:layout_gravity="end|center"
                android:visibility="visible"/>

        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>
        <Button
        android:id="@+id/mine_btn_logout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button_red"
        android:text="@string/tuichudenglu"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"/>


    </LinearLayout>
</ScrollView>
</LinearLayout>